<resources>
    <string name="app_name">必聚</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">必聚</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_registered">RegisteredActivity</string>
    <string name="title_activity_newteam">NewteamActivity</string>
    <string name="title_activity_newteam_activitys">NewteamActivitys</string>
    <string name="title_activity_request_code">RequestCodeActivity</string>
    <string name="title_activity_user_setting">UserSettingActivity</string>
    <string name="title_activity_add_buddy">AddBuddyActivity</string>
    <string name="title_activity_find_friends">FindFriendsActivity</string>
    <string name="title_activity_mdfsdfsdf">Mdfsdfsdf</string>
    <string name="title_activity_main_activitysdfsd">MainActivitysdfsd</string>
    <string name="title_activity_main_activity_ssssss">MainActivitySSSSSS</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="title_activity_main_activity_ssss">MainActivitySSSS</string>
    <string name="title_activity_group">GroupActivity</string>
    <string name="title_activity_team_setting">TeamSettingActivity</string>
    <string name="title_activity_new_party">NewPartyActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_time">TimeActivity</string>
    <string name="title_activity_ok_party">OkPartyActivity</string>
    <string name="title_activity_party_details">PartyDetailsActivity</string>
    <string name="title_activity_more">MoreActivity</string>
    <string name="title_activity_big_map">BigMapActivity</string>
    <string name="title_activity_binding_phone">BindingPhoneActivity</string>
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>
    <string name="title_activity_comments_list">CommentsListActivity</string>
    <string name="title_activity_friends_data">FriendsDataActivity</string>
    <string name="Send_the_following_pictures">Send the following pictures?</string>
    <string name="location_prefix">[my location]</string>
    <string name="location_recv">[%1$s location]</string>
    <string name="voice">Voice</string>
    <string name="picture">[Picture]</string>
    <string name="search_header">Search</string>
    <string name="video">[Video]</string>
    <string name="file">[file]</string>
    <string name="voice_call">[Voice call]</string>
    <string name="sd_card_does_not_exist">"SD card does not exist, can't take pictures"</string>
    <string name="address_book">Address book</string>
    <string name="call_duration">call duration</string>
    <string name="Refused">Refused</string>
    <string name="The_other_party_has_refused_to">Call was refused</string>
    <string name="The_other_is_not_online">The peer is not online</string>
    <string name="The_other_is_on_the_phone">The peer is on the phone</string>
    <string name="The_other_party_did_not_answer">The peer did not answer</string>
    <string name="did_not_answer">did not answer</string>
    <string name="Has_been_cancelled">Cancelled</string>
    <string name="title_activity_video_call">VideoCallActivity</string>
    <string name="File_does_not_exist">File does not exist</string>
    <string name="Is_moved_into_blacklist">Moving to blacklist..</string>
    <string name="Move_into_blacklist_success">Move into blacklist success</string>
    <string name="Move_into_blacklist_failure">Move into blacklist failure</string>
    <string name="The_file_is_not_greater_than_10_m">The file is not greater than 10 m</string>
    <string name="select_contacts">Select the contact</string>
    <string name="search_new">Search</string>
    <string name="newchat">Create new group</string>
    <string name="confirm_forward_to">Confirm to forward to：%1$s ?</string>
    <string name="now_refresh_list">Refreshing contact list</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="hang_up">Hang up</string>
    <string name="answer">Answer</string>
    <string name="mute">Mute</string>
    <string name="button_pushtotalk">Hold to talk</string>
    <string name="attach_take_pic">Capture</string>
    <string name="attach_picture">Image</string>
    <string name="move_up_to_cancel">Finger up to cancel sending</string>
    <string name="attach_video_call">Video call</string>
    <string name="attach_voice_call">Voice call</string>
    <string name="attach_file">File</string>
    <string name="attach_location">Location</string>
    <string name="attach_video">Video</string>
    <string name="Hands_free">Hands free</string>
    <string name="receive_the_passthrough">Receive cmd message : action：</string>
    <string name="Are_connected_to_each_other">Connecting to peer..</string>
    <string name="Is_not_yet_connected_to_the_server">Not connect to server</string>
    <string name="have_connected_with">Connected to the peer and waiting for the peer to accept</string>
    <string name="In_the_call">In the call..</string>
    <string name="The_other_party_refused_to_accept">The call was refused</string>
    <string name="Connection_failure">Connection failed!</string>
    <string name="The_other_party_is_not_online">The peer is not online now, please try later</string>
    <string name="The_other_is_on_the_phone_please">The peer is busy now, please try later</string>
    <string name="The_other_is_hang_up">The peer has ended the call</string>
    <string name="direct_call">Direct</string>
    <string name="relay_call">Relay</string>
    <string name="hanging_up">Hanging up..</string>
    <string name="title_activity_voice_call">VoiceCallActivity</string>
    <string name="The_other_party_did_not_answer_new">The peer did not answer</string>
    <string name="cant_find_pictures">"Can't find pictures"</string>
    <string name="text_ack_msg">Read</string>
    <string name="text_delivered_msg">Delivered</string>
    <string name="location_message">The location information</string>
    <string name="button_send">Send</string>
    <string name="Network_error">Network error</string>
    <string name="please_check">key validation error!Please on AndroidManifest.xml file check the key set</string>
    <string name="Making_sure_your_location">Making sure your location..</string>
    <string name="not_download">Did not download:</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="Into_the_blacklist">是否移入黑名单?</string>
    <string name="connect_failuer_toast">Please check the network or try again later</string>
    <string name="send_fail">Send failed</string>
    <string name="error_send_invalid_content">The message content is not allowed to be sent!</string>
    <string name="error_send_not_in_the_group">You already were not in the group</string>
    <string name="title_activity_show_big_image">ShowBigImage</string>
    <string name="Download_the_pictures_new">Download the pictures:</string>
    <string name="Download_the_pictures">Download the pictures: 0%</string>
    <string name="Is_download_voice_click_later">Downloading the voice message, click later</string>
    <string name="Have_downloaded">Already downloaded</string>
    <string name="Did_not_download">Not yet downloaded</string>
    <string name="title_activity_baidu_map">BaiduMapActivity</string>
    <string name="title_activity_show_normal_file">ShowNormalFileActivity</string>
    <string name="downwaiting">Downloading the file, please try again later</string>
    <string name="Failed_to_download_file">Failed to download file:</string>
    <string name="title_activity_show_video">ShowVideoActivity</string>
    <string name="is_down_please_wait">Downloading video, please try again later</string>
    <string name="unable_to_get_loaction">Unable to get to your location information!</string>
    <string name="title_activity_forward_message">ForwardMessageActivity</string>
    <string name="title_activity_pick_contact_no_checkbox">PickContactNoCheckboxActivity</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="Send_voice_need_sdcard_support">Send voice need sdcard support</string>
    <string name="recoding_fail">the recording failure, please try again！</string>
    <string name="release_to_cancel">release finger to cancel sending</string>
    <string name="Recording_without_permission">Recording without permission</string>
    <string name="The_recording_time_is_too_short">The recording time is too short</string>
    <string name="send_failure_please">Send failure, please test whether the server connection</string>
    <string name="not_connect_to_server">Not connect to server, please try again later</string>
    <string name="Whether_to_empty_all_chats">Whether to empty all chats</string>
    <string name="title_activity_more_picture">MorePictureActivity</string>
    <string name="prompt">prompt</string>
    <string name="button_cancel">Cancel</string>
    <string name="title_activity_before_login">必聚</string>
    <string name="title_activity_login_jump">LoginJumpActivity</string>
    <string name="title_activity_phone_registered">PhoneRegisteredActivity</string>
    <string name="title_activity_phone_login">PhoneLoginActivity</string>
    <string name="title_activity_wxentry">WXEntryActivity</string>
    <string name="title_activity_nickname">NicknameActivity</string>
    <string name="title_activity_sex">SexActivity</string>
    <string name="title_activity_add_new_party">AddNewPartyActivity</string>
    <string name="title_activity_add_friends2">AddFriends2Activity</string>
    <string name="title_activity_contact_search">ContactSearchActivity</string>
    <string name="title_activity_team_setting2">TeamSetting2Activity</string>
    <string name="chat_base_list_view_listEmptyHint">无数据</string>
    <string name="chat_base_list_view_noMore">已无更多</string>
    <string name="chat_utils_tips">提示</string>
    <string name="chat_utils_please_choose">请选择</string>
    <string name="chat_utils_share">分享</string>
    <string name="chat_utils_right">好的</string>
    <string name="chat_utils_hardLoading">努力加载中...</string>
    <string name="chat_common_cancel">取消</string>
    <string name="chat_bottom_record_layout_pressToRecord">按住录音</string>
    <string name="chat_sending">发送中</string>
    <string name="chat_received">已接收</string>
    <string name="chat_common_emptyStr" />
    <string name="chat_common_avatar">头像</string>
    <string name="friends_title_text">聊天</string>
    <string name="friends_title_right_text">添加聊天</string>
    <string name="friends_prompt">你还没有添加任何的好友！</string>
    <string name="group_second_text_left">聊天</string>
    <string name="group_second_text_center">日程</string>
    <string name="group_second_text_right">相册</string>
    <string name="friends_title_right">查找好友</string>
    <string name="friends_title_left">返回</string>
    <string name="findfriends_title_text">查找好友</string>
    <string name="findfriends_title_left">返回</string>
    <string name="findfriends_prompt">输入好友必聚号或者绑定的手机号</string>
    <string name="findfriends_hint">必聚号或者手机号</string>
    <string name="findfriends_but">查找好友</string>
    <string name="findfriends_sendrequest">发送好友请求</string>
    <string name="findfriends_againfind">重新查找</string>
</resources>