<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/albumback" >

    <RelativeLayout
        android:id="@+id/headview"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="3dp"
        android:background="@drawable/plugin_camera_title_bar"
        android:gravity="center_vertical"
        android:visibility="gone" >

        <Button
            android:id="@+id/back"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/plugin_camera_title_btn_back"
            android:text="@string/album"
            android:textColor="#fff"
            android:textSize="14sp" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="67dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:background="@drawable/plugin_camera_title_btn_cancel"
            android:text="@string/camera_cancel"
            android:textColor="#fff"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="3dp"
        android:background="@drawable/plugin_camera_bottom_bar" >

        <Button
            android:id="@+id/preview"
            android:layout_width="60.0dp"
            android:layout_height="40.0dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/preview_2"
            android:text="@string/preview" />

        <Button
            android:id="@+id/ok_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/ok_button" />

        <TextView
            android:id="@+id/photo_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/ok_button"
            android:text="TextView"
            android:textColor="#ffffff"
            android:layout_marginRight="5.0dp"
            android:textSize="17.0sp" />
    </RelativeLayout>

    <GridView
        android:id="@+id/myGrid"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/bottom_layout"
        android:layout_centerHorizontal="true"
        android:background="@color/albumback"
        android:horizontalSpacing="10dp"
        android:numColumns="4"
        android:verticalSpacing="10dp" />

    <TextView
        android:id="@+id/myText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_photo"
        android:textColor="@color/black"
        android:visibility="gone"
        />

</RelativeLayout>