<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efefef"
    tools:context=".FriendsFragment" >

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:id="@+id/friends_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@drawable/title_background" >

        <TextView
            android:id="@+id/tab_friends_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/friends_title_text"
            android:textColor="@drawable/title_text_color"
            android:textSize="@dimen/title_size" />

        <RelativeLayout
            android:id="@+id/tab_friends_addbuddy_layout"
            android:layout_width="@dimen/title_right_width"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true" >

            <TextView
                android:id="@+id/tab_friends_addbuddy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/friends_title_right_text"
                android:textColor="@drawable/title_right_color"
                android:textSize="@dimen/title_right_size" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="0.50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="#aaaaaa" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/friends_add_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/friends_title"
        android:layout_centerHorizontal="true" >

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/friends_swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#efefef" >

            <ListView
                android:id="@+id/friends_listview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" >
            </ListView>
        </android.support.v4.widget.SwipeRefreshLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/friends_add_tishi_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/friends_title"
        android:layout_centerHorizontal="true"
        android:visibility="gone" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/friends_prompt"
            android:textColor="#ff0000" />
    </RelativeLayout>

</RelativeLayout>