<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFriends2Activity" >

    <RelativeLayout
        android:id="@+id/addbuddy_listview_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" 
        >

        <RelativeLayout
            android:id="@+id/addbuddy_back_layout"
            android:layout_width="@dimen/title_left_width"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true" >

            <TextView
                android:id="@+id/addbuddy_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/friends_title_left"
                android:textColor="@drawable/title_left_color"
                android:textSize="@dimen/title_left_size" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/addbuddy_findfriends_layout"
            android:layout_width="@dimen/title_right_width"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" >

            <TextView
                android:id="@+id/addbuddy_findfriends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/friends_title_right"
                android:textColor="@drawable/title_right_color"
                android:textSize="@dimen/title_right_size" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/friends_title_text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="0.50dp"
            android:layout_alignParentBottom="true"
            android:background="#aaaaaa" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/addbuddy_listview_layout" >

        <TextView
            android:id="@+id/fast_position"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal|top"
            android:layout_margin="34dp"
            android:background="@drawable/sort_icon_bg_click"
            android:gravity="center"
            android:padding="2dp"
            android:textColor="#404040"
            android:textSize="48sp"
            android:visibility="invisible" />

        <com.BJ.utils.QuickAlphabeticBar
            android:id="@+id/fast_scroller"
            android:layout_width="22dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="#ffffff"
            android:scaleType="centerInside"
            android:src="@drawable/dic_background" >
        </com.BJ.utils.QuickAlphabeticBar>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/fast_scroller" >

            <android.support.v4.widget.SwipeRefreshLayout
                android:id="@+id/contact_swipe_refresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ListView
                    android:id="@+id/contact_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@+id/fast_scroller"
                    android:background="#ffffff"
                    android:visibility="visible" />
            </android.support.v4.widget.SwipeRefreshLayout>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>